<?xml version="1.0" encoding="utf-8"?>
<resources>
    <color name="white">#FFFFFF</color>
    <color name="light_gray">#DDDDDD</color>
    <color name="light_background">#DDDDFF</color>
    <color name="kutsuplus_light_blue"> #B9D6F0</color>
    
    <string name="app_name">ÄlyBussi</string>
    
    
    <!-- Order Tabs -->
    <string name="TAB_form">Order</string>
    <string name="TAB_form_description">This tab contains a form to order a Kutsuplus ride.</string>
    <string name="TAB_ticket">Ticket</string>
    <string name="TAB_ticket_description">This tab contains a ticket for a Kutsuplus ride.</string>
    <string name="TAB_map">Map</string>
    <string name="TAB_map_description">This tab contains a map to select the from and destionation points.</string>
    <!-- Order Form -->
    <string name="OF_current_location">Current location</string>
    <string name="OF_from">From</string>
    <string name="OF_from_extra_options_desciption">By selecting this you can see more options for the from field.</string>
    <string name="OF_from_field_description">Type here the starting address of the ride.</string>
    
    <string name="OF_to">To</string>
    <string name="OF_to_extra_options_description">By selecting this you can see more options for the destination field.</string>
    <string name="OF_to_field_description">Type here the destination address of the ride.</string>
    
    <string name="OF_number_of_passengers">Number of passengers</string>
    <string name="OF_number_of_passengers_hint">1</string>
    <string name="OF_max_price">Max price (€)</string>
    <string name="OF_max_price_description">Type here the maximum price that the ride can cost.</string>
    
    <string name="OF_estimated_price">Estimated price (€)</string>
    <string name="OF_estimated_price_number">0</string>
    
    <string name="OF_pickup_stop">Pickup stop</string>
    <string name="OF_dropoff_stop">Dropoff stop</string>
    
    <string name="OF_button_order">Order</string>
    <string name="OF_button_order_description">A button to order the ride.</string>
    
    <!-- Menu -->
    <string name="title_settings">Settings</string>
    <string name="show_kplus_stops">Show KutsuPlus stops</string>
    <string name="turn_on_ride_crumb">ride crumb: ON</string>
    <string name="turn_off_ride_crumb">ride crumb: OFF</string>
    <string name="clear_map">clear map</string>
    <string name="start_focus">selecting start</string>
    <string name="finish_focus">selecting finish</string>
    
    <!-- Operating hours dialog -->
    <string name="ok">OK</string>
    <string name="operating_hours">Attention! Service is available only on work days between 6am and 11pm</string>
    
    <!-- SMS Handling -->
    <string name="SMS_Warning">The order costs some money. Shall we continue?</string>   
    <string name="SMS_YES">Yes</string>   
    <string name="SMS_No">No</string>   
    
    <string name="title_sms_notification">Receive ticket</string>
    <string name="sms_waiting">Seconds </string>
    <string name="sms_timeout">Still waiting</string>
    <string name="sms_reply_received">Ticket received</string>
    <string name="sms_hsl_number">5556</string>    
    <!--  0504106775 -->
    <string name="kutsuplus_url_short">http://kutsuplus.fi</string>
    <string name="kutsuplus_url">http://kutsuplus.fi/m/sign-in</string>

    <string name="stop_list_path">kutsupluspysakit_ext.txt</string>
    
    <string name="reittiopas_api_user">aaltokutsuplus</string>
    <string name="reittiopas_api_pass">jysn9-g4</string>    
    
    <!--  SMS Parsing -->
    <string-array name="sms_keyword_array">
        <item>en</item>
        <item>Pickup</item>
        <item>stop</item>
        <item>Vehicle</item>
        <item>Code</item>
        <item>pax</item>
        <item>Drop-off</item>
        <item>e</item>
        <item>Order Id</item>
        <item>https</item>
    </string-array>
    
    
    <!--  marker title-->
    <string name="start_click_on_map">start</string>   
    <string name="finish_click_on_map">finish</string> 
    <string name="walking_distance">distance</string>   
    <string name="walking_duration">duration</string> 
    
    <!--  toast on map -->
    <string name="toast_address_on_map_click">address: </string>
    <string name="toast_address_not_found">location was not found</string>

    <!-- ticket Strings -->
    <string name="code">Ticket code: </string>
    <string name="passengers">Passengers: </string>
    <string name="price">Price: </string>
    <string name="pickup_stop">Pickup stop: </string>
    <string name="pickup_address">Pickup address: </string>
    <string name="pickup_time">Pickup time: </string>
    <string name="dropoff_stop">Dropoff stop: </string>
    <string name="dropoff_address">Dropoff address: </string>
    <string name="dropoff_time">Dropoff time: </string>
    <string name="vehicle">Vehicle: </string>
    <string name="order_id">Order ID: </string>
    <string name="link">More information</string>
    
</resources>
