<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
  <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kutsuplus_url_short"
        android:clickable="true" 
        android:onClick="doOpenBrowser"/>/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <!-- Order Form -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/OF_from" >
        </TextView>

        <EditText
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/OF_from_hint" >
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/OF_to" >
        </TextView>

        <EditText
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/OF_to_hint" >
        </EditText>
    </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/OF_number_of_passengers" >
        </TextView>

        <EditText
            android:id="@+id/number_of_passengers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"	
            android:hint="@string/OF_number_of_passengers_hint" >
        </EditText>
    </LinearLayout>
            
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/OF_max_price" >
        </TextView>

        <EditText
            android:id="@+id/max_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/OF_max_price_hint" >
        </EditText>
    </LinearLayout>
             
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/OF_estimated_price" >
        </TextView>

        <TextView
            android:id="@+id/estimated_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" >
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/bn_order"
        android:layout_width="150dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/OF_button_order" />
    
   
    
</LinearLayout>